--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ style=" background-repeat:no-repeat ;
 background-size:cover;
 background-attachment: fixed;"
 >
-<center><font size="6"color="#66CCFF">「乘上与平时反方向的电车，为了去看未曾见过的风景」</font> </center>
-<center><font size="1"color="#66CCFF">MINSEIZE in 2021</br>Background:<a href="https://www.pixiv.net/artworks/66474905" target="_blank">12.27</a>by<a href="https://www.pixiv.net/users/6147118" target="_blank">雨陌</a></center>
+<center><font size="6"color="#66CCFF">「我们所经历的每个平凡的日常，也许就是连续发生的奇迹」</font> </center>
+<center><font size="1"color="#66CCFF">MINSEIZE in 2021<br />Background:<a href="https://www.pixiv.net/artworks/66474905" target="_blank">12.27</a>by<a href="https://www.pixiv.net/users/6147118" target="_blank">雨陌</a></center>
 </body>
 </html>
