--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@ background-size:cover;
 background-attachment: fixed;"
 >
 <center><font size="6"color="#66CCFF">「我们所经历的每个平凡的日常，也许就是连续发生的奇迹」</font> </center>
-<center><font size="1"color="#66CCFF">MINSEIZE in 2021<br />Background:<a href="https://www.pixiv.net/artworks/66474905" target="_blank">12.27</a>by<a href="https://www.pixiv.net/users/6147118" target="_blank">雨陌</a></center>
+  <center><font size="1"color="#66CCFF">MINSEIZE in 2021|<a href="BMI.html"target="_blank">BMI计算器</a></font></center>
+    <center><font size="1"color="#66CCFF">minseize_gh@163.com</font></center>
+      <center><font size="1"color="#66CCFF">Background:<a href="https://www.pixiv.net/artworks/66474905" target="_blank">12.27</a>by<a href="https://www.pixiv.net/users/6147118" target="_blank">雨陌</a></font></center>
 </body>
 </html>
