--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 		<title>MINSEIZE</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link re
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body class="single is-preload">
+
 				<!-- Main -->
 					<div id="main">
 
@@ -22,9 +25,9 @@
 									</div>
 									
 								</header>
-								<p>Hello, you could call me Minseize. I'm a high school student from China and I'm learning Python <del>and English</del>. Welcome to this page. When you see this page, it means that this site is under construction. This site is going to be used as a blog, but the owner is lazy…</p>
+								<p>Hello, you could call me Minseize. I'm a high school student from China and I'm learning Python <del>and English</del>. Welcome to this page. When you see the page, it means that this site is under construction. The site is going to be used as a blog, but the owner is lazy…</p>
 								<p>I'll come back to update next January…or February?</p>
-								<p>你好，我是Minseize。高中生。正在学习Python。欢迎来到这个页面。当你看到这个页面，说明这个网站正在施工。网站准备用作博客，但因为咕咕咕咕咕
+								<p>你好，我是Minseize。高中生。正在学习Python。欢迎来到这个页面。当你看到此页面，说明这个网站正在施工。网站准备用作博客，但因为咕咕咕咕咕
 								<p>明年1月会回来更新的……或者2月？
 							</article>
 
